Feature: 4 No git log has been added here

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
         </details>
 
 
+        <details>
+            <summary>
+                4. How many commits we did. Its figure will be shown with deatils/
+            </summary>
+            <pre>
+            git log
+        </pre>
+        </details>
+
+
     </div>
 
 </body>
