code tag has been added

--- a/index.html
+++ b/index.html
@@ -16,24 +16,28 @@
 
         <details>
             <summary> 1. After creating a github file... </summary>
-            <pre>
-            git init
-            git add .
-            git commit -m "first commit"
-            git branch -M main
-            git remote add origin https://github.com/safaroque7/githubNote.git
-            git push -u origin main
-        </pre>
+            <code>
+                <pre>
+                    git init
+                    git add .
+                    git commit -m "first commit"
+                    git branch -M main
+                    git remote add origin https://github.com/safaroque7/githubNote.git 
+                    git push -u origin main
+                </pre>
+            </code>
         </details>
 
 
         <details>
             <summary> 2. Next time to commit </summary>
-            <pre>
-            git add . 
-            git commit -m "custom message"
-            git push -u origin main
-        </pre>
+            <code>
+                <pre>
+                    git add . 
+                    git commit -m "custom message"
+                    git push -u origin main
+                </pre>
+            </code>
         </details>
 
 
@@ -41,19 +45,35 @@
             <summary>
                 3. Since add and commit are mendetory. So it can be written this way.
             </summary>
-            <pre>
-            git commit -am "custom message"
-        </pre>
+            <code>
+                <pre>
+                    git commit -am "custom message"
+                </pre>
+            </code>
         </details>
 
 
         <details>
             <summary>
-                4. How many commits we did. Its figure will be shown with deatils/
+                4. How many commits we did. Its figure will be shown with deatils.
             </summary>
-            <pre>
-            git log
-        </pre>
+            <code>
+                <pre>
+                    git log
+                </pre>
+            </code>
+        </details>
+
+
+        <details>
+            <summary>
+                5. To remove any files.
+            </summary>
+            <code>
+                <pre>
+                    git rm [file name with extenstion]
+                </pre>
+            </code>
         </details>
 
 
