7 and 8 No. items have been added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="container">
 
 
-
         <details>
             <summary> 1. After creating a github file... </summary>
             <code>
@@ -72,6 +71,40 @@
             <code>
                 <pre>
                     git rm [file name with extenstion]
+                </pre>
+            </code>
+        </details>
+
+        <details>
+            <summary>
+                6. Retrieving removed file.
+            </summary>
+            <code>
+                <pre>
+                    upcomming
+                </pre>
+            </code>
+        </details>
+
+
+        <details>
+            <summary>
+                7. Short Status. M means after modifying it has not been uploaded to git. and ?? mean it is a new file which one has not sent to github.
+            </summary>
+            <code>
+                <pre>
+                    git status -s
+                </pre>
+            </code>
+        </details>
+
+        <details>
+            <summary>
+                ৮. শুধুমাত্র গিটের কমিটগুলো দেখতে
+            </summary>
+            <code>
+                <pre>
+                    git shortlog
                 </pre>
             </code>
         </details>
