--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <div class="container">
 
-
         <details>
             <summary> 1. After creating a github file... </summary>
             <code>
@@ -86,10 +85,10 @@
             </code>
         </details>
 
-
         <details>
             <summary>
-                7. Short Status. M means after modifying it has not been uploaded to git. and ?? mean it is a new file which one has not sent to github.
+                7. Short Status. M means after modifying it has not been uploaded to git. and ?? mean it is a new file
+                which one has not sent to github.
             </summary>
             <code>
                 <pre>
@@ -110,7 +109,14 @@
         </details>
 
 
+        <details>
+            <summary> This line has been written for testing checkout </summary>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, asperiores! Molestias at laborum
+                iusto dicta laudantium commodi vitae tenetur dignissimos. </p>
+        </details>
+
     </div>
+
 
 </body>
 
