--- a/index.html
+++ b/index.html
@@ -108,11 +108,15 @@
             </code>
         </details>
 
-
         <details>
-            <summary> This line has been written for testing checkout </summary>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, asperiores! Molestias at laborum
-                iusto dicta laudantium commodi vitae tenetur dignissimos. </p>
+            <summary> ধরুন, আপনি কোড এডিটরে কোনো পরিবর্তন করার পর গিট পুশ করে গিটহাবে আপলোড করে দিলেন। এরপর ভুলক্রমে
+                কিছু কোড কোনো ফাইল থেকে মুছে গেল। আপনি বুঝতে পারেননি। এরপর আপনি কোড এডিটর বন্ধ করে ফেললেন। পরবর্তীতে যখন
+                আপনি ফাইল খুললেন, খুলে দেখেন আপনার কাঙ্ক্ষিত কোডটুকু নেই। অথচ গিটহাবেে আছে। সেটা আপনার কোড এডিটরে ফিরিয়ে
+                নেওয়ার জন্য...। যদি ফাইলটির নাম হয়ে থাকে index.html।
+            </summary>
+            <code>
+                git checkout index.html
+            </code>
         </details>
 
     </div>
