checking git history

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <details>
             <summary> ধরুন, আপনি কোড এডিটরে কোনো পরিবর্তন করার পর গিট পুশ করে গিটহাবে আপলোড করে দিলেন। এরপর ভুলক্রমে
                 কিছু কোড কোনো ফাইল থেকে মুছে গেল। আপনি বুঝতে পারেননি। এরপর আপনি কোড এডিটর বন্ধ করে ফেললেন। পরবর্তীতে যখন
-                আপনি ফাইল খুললেন, খুলে দেখেন আপনার কাঙ্ক্ষিত কোডটুকু নেই। অথচ গিটহাবেে আছে। সেটা আপনার কোড এডিটরে ফিরিয়ে
+                আপনি ফাইল খুললেন, খুলে দেখেন আপনার কাঙ্ক্ষিত কোডটুকু নেই। অথচ গিটহাবে আছে। সেটা আপনার কোড এডিটরে ফিরিয়ে
                 নেওয়ার জন্য...। যদি ফাইলটির নাম হয়ে থাকে index.html।
             </summary>
             <code>
