--- a/index.html
+++ b/index.html
@@ -121,15 +121,18 @@
 
 
         <details>
-            <summary> ১০. গিটের পরিবর্তনগুলো একটা গিটহিস্টোরির মাধ্যমে থাকে। যেমন আমরা সহজেই বুঝতে পারি বা চেকআউটের মাধ্যমে
+            <summary> ১০. গিটের পরিবর্তনগুলো একটা গিটহিস্টোরির মাধ্যমে থাকে। যেন আমরা সহজেই বুঝতে পারি বা চেকআউটের
+                মাধ্যমে
                 ফিরে যেতে পারি। গিটের এই হিস্টোরিগুলো দেখতে নিচের কোড।
             </summary>
             <code>
                 git log --oneline
             </code>
 
-            <p> উপরের কোডটি লিখে এন্টার দেওয়ার পর নিচের মতো করে কোড পাব। সেখান থেকে আমরা  git checkout c8a217f লিখে আমাদের কাঙ্ক্ষিত আগের ফাইলের কোডগুলো দেখতে পারি।</p>
+            <p> উপরের কোডটি লিখে এন্টার দেওয়ার পর নিচের মতো করে কোড পাব। সেখান থেকে আমরা git checkout c8a217f লিখে
+                আমাদের কাঙ্ক্ষিত আগের ফাইলের কোডগুলো দেখতে পারি।</p>
 
+            <pre>
             <code>
                 1afd2a5 (HEAD -> main, origin/main) checking git history
                 c8a217f checkout learned
@@ -140,6 +143,7 @@
                 f41cf72 font size extended
                 78a9ece first commit
             </code>
+        </pre>
         </details>
 
     </div>
