--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
 
         </details>
 
+
+        <details>
+            <summary> ১২. আমার কম্পিউটারে আমার ইউজার নেম এবং ই-মেইল দিয়ে সব কিছু ঠিকঠাক আছে। গিটহাবে ফাইল আপলোড করতে পারি। সব কাজ ঠিক াঠাক মতো হয়। কোনো সমস্যা নেই। এখন অন্য কোনো গিটহাব একাউন্টের কোনো রিপোজিটরিতে কোনো ফাইল তুলতে গেলে কিভাবে git config করতে হবে? </summary>
+            <p> Answer is coming. </p>
+        </details>
+
     </div>
 
 
